# ml-wind-turbine-site-suitability

./: .env.example  .gitignore  README.md  dataset_preprocessing.ipynb  knn_logreg.ipynb  pyproject.toml  turbine_prediction_model.ipynb
tools/: extract.py  label_score.py
